--- a/Index.html
+++ b/Index.html
@@ -25,30 +25,32 @@
   </head>
   <body>
     <div class="container">
-      <div class="row row-cols-2 g-3">
-        <div class="col">
-          <div class="row">
-            <div class="col">
-              <div class="box"></div>
-            </div>
-            <div class="col">
-              <div class="box"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="box"></div>
-        </div>
-        <div class="col">
-          <div class="box"></div>
-        </div>
-        <div class="col">
-          <div class="box"></div>
-        </div>
-        <div class="col">
-          <div class="box"></div>
-        </div>
-      </div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>First</th>
+            <th>Last</th>
+            <th>Age</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Kyle</td>
+            <td>Cook</td>
+            <td>27</td>
+          </tr>
+          <tr>
+            <td>Sally</td>
+            <td>Thron</td>
+            <td>13</td>
+          </tr>
+          <tr>
+            <td>Jim</td>
+            <td>Smith</td>
+            <td>48</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
